[gd_scene load_steps=6 format=3 uid="uid://bp60gp8038hbt"]

[ext_resource type="Script" path="res://scenes/features/chest.gd" id="1_bt05q"]
[ext_resource type="Script" path="res://resources/inventory/inventory_data.gd" id="2_a5fao"]

[sub_resource type="Resource" id="Resource_6q4pm"]
script = ExtResource("2_a5fao")
slot_datas = Array[Resource("res://resources/inventory/slot_data.gd")]([null, null, null, null, null, null, null, null, null, null, null, null])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80ajm"]
size = Vector2(32, 16)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q4ddi"]
radius = 24.0
height = 76.0

[node name="Chest" type="StaticBody2D" groups=["external_inventory"]]
collision_layer = 33
collision_mask = 0
script = ExtResource("1_bt05q")
inventory_data = SubResource("Resource_6q4pm")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.266667, 0.14902, 0.0980392, 1)
polygon = PackedVector2Array(-16, 0, 16, 0, 16, -16, -16, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_80ajm")

[node name="Tooltip" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = -20.0
text = "(F)"
horizontal_alignment = 1

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, -22)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_q4ddi")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
